force-app/main/default/objects/Timesheet_Line_Items__c/Timesheet_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Timesheet Line Items</label>
    <nameField>
        <displayFormat>TLI-{000000}</displayFormat>
        <label>Timesheet Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>