force-app/main/default/objects/Timesheet_Line_Items__c/fields/Entry_Day__c.field-meta.xml
<CustomField>
    <fullName>Entry_Day__c</fullName>
    <label>Entry Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>