force-app/main/default/objects/Timesheet_Line_Items__c/fields/isEditable__c.field-meta.xml
<CustomField>
    <fullName>isEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEditable</label>
    <type>Checkbox</type>
</CustomField>