force-app/main/default/objects/Timesheet_Line_Items__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Timesheet Line Items</relationshipLabel>
    <relationshipName>Timesheet_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>